--- a/frontend/src/components/statics/css/courseBox.css
+++ b/frontend/src/components/statics/css/courseBox.css
@@ -12,6 +12,8 @@
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
   }
   .courseBox_courseTextTitle {
+    margin: 0px;
+    padding: 0px;
     font-size: 2em;
     height: 2em;
     font-weight: bold;
