--- a/frontend/src/views/Notes/statics/css/notes.css
+++ b/frontend/src/views/Notes/statics/css/notes.css
@@ -1,4 +1,4 @@
-@import "../../../../utils/colors.css";
+@import "../../../../utils/colors.css" !important;
 @media only screen and (min-width: 1920px) {
   .note_root {
     width: 96% !important;
@@ -15,54 +15,55 @@
     margin: 0px auto !important;
   }
   .note_creatorTop {
-    width: 400px;
-    height: 120px;
+    width: 400px !important;
+    height: 120px !important;
   }
   .note_creatorTopInside {
-    height: 120px;
+    height: 120px !important;
   }
   .note_textContainer {
-    height: 120px;
+    height: 120px !important;
   }
   .note_text {
-    font-weight: bold;
-    font-size: 2.5em;
+    font-weight: bold !important;
+    font-size: 2.5em !important;
   }
   .note_creatorBot {
-    position: relative;
+    position: relative !important;
   }
   .note_pad {
-    height: 100vh;
+    height: 100vh !important;
   }
   .note_sidebarComponent {
-    padding: 10px;
+    padding: 10px !important;
   }
   .note_padArea {
   }
   .note_padTop {
-    width: 86%;
-    position: relative;
-    left: 25px;
+    width: 86% !important;
+    position: relative !important;
+    left: 25px !important;
   }
   .note_padBot {
-    position: relative;
-    top: 10px;
-    left: 0px;
+    position: relative !important;
+    top: 10px !important;
+    left: 0px !important;
   }
   .note_sidebarcontainer {
   }
   .note_padContainer {
-    position: relative;
-    top: 5%;
+    position: relative !important;
+    top: 5% !important;
   }
   .note_plusIcon {
-    cursor: pointer;
-    height: 30px;
-    position: relative;
-    left: 20px;
+    cursor: pointer !important;
+    height: 30px !important;
+    position: relative !important;
+    left: 20px !important;
   }
   .note_gridIconsContainer {
-    width: 70px;
-    cursor: pointer;
+    width: 70px !important;
+    float: right !important;
+    cursor: pointer !important;
   }
 }
