--- a/frontend/src/views/Quiz/statics/css/quiz.css
+++ b/frontend/src/views/Quiz/statics/css/quiz.css
@@ -15,54 +15,55 @@
     margin: 0px auto !important;
   }
   .quiz_creatorTop {
-    width: 400px;
-    height: 120px;
+    width: 400px !important;
+    height: 120px !important;
   }
   .quiz_creatorTopInside {
-    height: 120px;
+    height: 120px !important;
   }
   .quiz_textContainer {
-    height: 120px;
+    height: 120px !important;
   }
   .quiz_text {
-    font-weight: bold;
-    font-size: 2.5em;
+    font-weight: bold !important;
+    font-size: 2.5em !important;
   }
   .quiz_creatorBot {
-    position: relative;
+    position: relative !important;
   }
   .quiz_pad {
-    height: 100vh;
+    height: 100vh !important;
   }
   .quiz_sidebarComponent {
-    padding: 10px;
+    padding: 10px !important;
   }
   .quiz_padArea {
   }
   .quiz_padTop {
-    width: 86%;
-    position: relative;
-    left: 25px;
+    width: 86% !important;
+    position: relative !important;
+    left: 25px !important;
   }
   .quiz_padBot {
-    position: relative;
-    top: 10px;
-    left: 0px;
+    position: relative !important;
+    top: 10px !important;
+    left: 0px !important;
   }
   .quiz_sidebarcontainer {
   }
   .quiz_padContainer {
-    position: relative;
-    top: 5%;
+    position: relative !important;
+    top: 5% !important;
   }
   .quiz_plusIcon {
-    cursor: pointer;
-    height: 30px;
-    position: relative;
+    cursor: pointer !important;
+    height: 30px !important;
+    position: relative !important;
     left: 20px;
   }
   .quiz_gridIconsContainer {
     width: 70px;
+    float: right;
     cursor: pointer;
   }
 }
