--- a/frontend/src/views/Dashboard/statics/css/dashboard.css
+++ b/frontend/src/views/Dashboard/statics/css/dashboard.css
@@ -28,14 +28,14 @@
     height: 810px !important;
   }
   .mainDash_activeClassBoxContainer {
-    width: 400px !important;
+    width: 95% !important;
     height: 250px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .mainDash_classResourcesBoxContainer {
-    width: 400px !important;
+    width: 95% !important;
     height: 510px !important;
     margin-top: 40px !important;
     background: var(--white) !important;
@@ -43,7 +43,7 @@
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .mainDash_discussionBoxContainer {
-    width: 400px !important;
+    width: 95% !important;
     height: 800px !important;
     margin: 0px auto !important;
     background: var(--white) !important;
@@ -51,14 +51,14 @@
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .mainDash_postBoxContainer {
-    width: 400px !important;
+    width: 95% !important;
     height: 250px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .mainDash_quizBoxContainer {
-    width: 400px !important;
+    width: 95% !important;
     height: 250px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
@@ -66,7 +66,7 @@
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .mainDash_tbdBoxContainer {
-    width: 400px !important;
+    width: 95% !important;
     height: 250px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
@@ -77,7 +77,7 @@
 
 @media only screen and (max-width: 1919px) {
   .mainDash_root {
-    width: 95% !important;
+    width: 98% !important;
     height: 100vh !important;
     margin: 0px auto !important;
     position: relative !important;
@@ -91,59 +91,59 @@
   }
   .mainDash_botBar {
     width: 100% !important;
-    height: 810px !important;
+    height: 700px !important;
     margin-top: 20px !important;
   }
   .mainDash_leftContainer {
-    height: 810px !important;
+    height: 750px !important;
   }
   .mainDash_middleContainer {
-    height: 810px !important;
+    height: 750px !important;
   }
   .mainDash_rightContainer {
-    height: 810px !important;
+    height: 750px !important;
   }
   .mainDash_activeClassBoxContainer {
-    width: 400px !important;
-    height: 250px !important;
+    width: 90% !important;
+    height: calc(180px + 2vw) !important;
+    max-height: 250px;
     background: var(--white) !important;
     border-radius: 15px !important;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .mainDash_classResourcesBoxContainer {
-    width: 400px !important;
-    height: 510px !important;
+    width: 90% !important;
+    height: 412px !important;
     margin-top: 40px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .mainDash_discussionBoxContainer {
-    width: 400px !important;
-    height: 800px !important;
+    height: 650px !important;
     margin: 0px auto !important;
     background: var(--white) !important;
     border-radius: 15px !important;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .mainDash_postBoxContainer {
-    width: 400px !important;
-    height: 250px !important;
+    width: 90% !important;
+    height: 200px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .mainDash_quizBoxContainer {
-    width: 400px !important;
-    height: 250px !important;
+    width: 90% !important;
+    height: 200px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
     margin-top: 25px !important;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .mainDash_tbdBoxContainer {
-    width: 400px !important;
-    height: 250px !important;
+    width: 90% !important;
+    height: 200px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
     margin-top: 25px !important;
