--- a/frontend/src/views/Admin/statics/css/studentView.css
+++ b/frontend/src/views/Admin/statics/css/studentView.css
@@ -37,11 +37,53 @@
     margin-left: 40px;
   }
   .adminStudent_plusIcon {
-    margin-right: 100px !important;
+    margin-right: 60px !important;
     margin-top: 10px !important;
     cursor: pointer;
   }
 }
 
 @media only screen and (max-width: 1919px) {
+  .adminStudent_root {
+    width: 100% !important;
+    margin: 0px auto !important;
+    position: relative !important;
+    flex-grow: 1;
+  }
+  .adminStudent_topBarContainer {
+    width: 95%;
+    margin-top: 20px !important;
+  }
+  .adminStudent_topBar {
+  }
+  .adminStudent_textContainer {
+    cursor: text;
+  }
+  .adminStudent_text {
+    font-weight: bold;
+    font-size: 2.5em;
+    cursor: text;
+  }
+  .adminStudent_botBar {
+    width: 100%;
+    margin-top: 0px !important;
+    margin-bottom: 50px;
+  }
+  .adminStudent_innerContainer {
+    width: 95% !important;
+    margin: 0px auto !important;
+  }
+  .adminStudent_departContainer {
+  }
+  .adminStudent_departText {
+    font-weight: bold;
+    font-size: 3em;
+    margin-left: 40px;
+  }
+  .adminStudent_plusIcon {
+     margin-left: 40px !important;
+    margin-right: 60px !important;
+    margin-top: 10px !important;
+    cursor: pointer;
+  }
 }
