--- a/frontend/src/views/Admin/statics/css/adminDashboard.css
+++ b/frontend/src/views/Admin/statics/css/adminDashboard.css
@@ -1,79 +1,152 @@
 @import "../../../../utils/colors.css";
 @media only screen and (min-width: 1920px) {
   .admin_root {
-    width: 95%;
-    height: 100vh;
+    width: 95% !important;
+    height: 100vh !important;
     margin: 0px auto !important;
-    position: relative;
-    flex-grow: 1;
+    position: relative !important;
+    flex-grow: 1 !important;
   }
 
   .admin_topBar {
-    width: 100%;
-    height: 50px;
+    width: 100% !important;
+    height: 50px !important;
     margin-top: 50px !important;
   }
   .admin_botBar {
-    width: 100%;
-    height: 810px;
+    width: 100% !important;
+    height: 810px !important;
     margin-top: 20px !important;
   }
   .admin_leftContainer {
-    height: 810px;
+    height: 810px !important;
   }
   .admin_middleContainer {
-    height: 810px;
+    height: 810px !important;
   }
   .admin_rightContainer {
-    height: 810px;
+    height: 810px !important;
   }
   .admin_activeClassBoxContainer {
-    width: 400px;
-    height: 250px;
-    background: var(--white);
-    border-radius: 15px;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+    width: 95% !important;
+    height: 250px !important;
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .admin_classResourcesBoxContainer {
-    width: 400px;
-    height: 510px;
+    width: 95% !important;
+    height: 510px !important;
     margin-top: 40px !important;
-    background: var(--white);
-    border-radius: 15px;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .admin_discussionBoxContainer {
-    width: 400px;
-    height: 800px;
+    width: 95% !important;
+    height: 800px !important;
     margin: 0px auto !important;
-    background: var(--white);
-    border-radius: 15px;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .admin_postBoxContainer {
-    width: 400px;
-    height: 250px;
-    background: var(--white);
-    border-radius: 15px;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+    width: 95% !important;
+    height: 250px !important;
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .admin_quizBoxContainer {
-    width: 400px;
-    height: 250px;
-    background: var(--white);
-    border-radius: 15px;
+    width: 95% !important;
+    height: 250px !important;
+    background: var(--white) !important;
+    border-radius: 15px !important;
     margin-top: 25px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
   .admin_tbdBoxContainer {
-    width: 400px;
-    height: 250px;
-    background: var(--white);
-    border-radius: 15px;
+    width: 95% !important;
+    height: 250px !important;
+    background: var(--white) !important;
+    border-radius: 15px !important;
     margin-top: 25px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
   }
 }
 
 @media only screen and (max-width: 1919px) {
+  .admin_root {
+    width: 98% !important;
+    height: 100vh !important;
+    margin: 0px auto !important;
+    position: relative !important;
+    flex-grow: 1 !important;
+  }
+
+  .admin_topBar {
+    width: 100% !important;
+    height: 50px !important;
+    margin-top: 50px !important;
+  }
+  .admin_botBar {
+    width: 100% !important;
+    height: 700px !important;
+    margin-top: 20px !important;
+  }
+  .admin_leftContainer {
+    height: 750px !important;
+  }
+  .admin_middleContainer {
+    height: 750px !important;
+  }
+  .admin_rightContainer {
+    height: 750px !important;
+  }
+  .admin_activeClassBoxContainer {
+    width: 90% !important;
+    height: calc(180px + 2vw) !important;
+    max-height: 250px;
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  }
+  .admin_classResourcesBoxContainer {
+    width: 90% !important;
+    height: 412px !important;
+    margin-top: 40px !important;
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  }
+  .admin_discussionBoxContainer {
+    height: 650px !important;
+    margin: 0px auto !important;
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  }
+  .admin_postBoxContainer {
+    width: 90% !important;
+    height: 200px !important;
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  }
+  .admin_quizBoxContainer {
+    width: 90% !important;
+    height: 200px !important;
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    margin-top: 25px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  }
+  .admin_tbdBoxContainer {
+    width: 90% !important;
+    height: 200px !important;
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    margin-top: 25px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  }
 }
