--- a/frontend/src/views/Login/statics/css/login.css
+++ b/frontend/src/views/Login/statics/css/login.css
@@ -67,4 +67,68 @@
 }
 
 @media only screen and (max-width: 1919px) {
+  .login_root {
+    width: 100%;
+    height: 100vh;
+    flex-grow: 1;
+  }
+  .login_logoBox {
+    width: 200px;
+    position: absolute;
+    top: 50px;
+    left: 150px;
+  }
+  .login_copyrightContainer {
+    width: 250px;
+    position: absolute;
+    left: 0px;
+    bottom: 15px;
+    font-size: 0.9em;
+  }
+  .login_copyrightText {
+    position: relative;
+    left: 100px;
+  }
+  .login_loginBoxContainer {
+    min-height: 55vh;
+  }
+  .login_loginBox {
+    width: 450px;
+    height: 600px;
+  }
+  .login_tabs {
+    display: flex;
+  }
+  .login_loginButton {
+    width: 300px;
+    height: 50px;
+    background-color: var(--red4);
+    color: var(--white);
+    border-radius: 15px;
+    font-size: 1.2em;
+  }
+  .login_guestButton {
+    width: 300px;
+    height: 50px;
+    background-color: var(--black);
+    color: var(--white);
+    border-radius: 15px;
+    font-size: 1.2em;
+  }
+  .login_inputButton {
+    outline: none;
+    border: none;
+    border-bottom: 1.5px solid var(--grey2);
+    font-size: 1.2em;
+    background: transparent;
+  }
+  .login_inputLabel {
+    font-size: 1.2em;
+  }
+  .login_lineVertical {
+    width: 1px;
+    height: 30px;
+    background-color: var(--grey2);
+    margin: 0px auto;
+  }
 }
