--- a/frontend/src/views/Profile/statics/css/profile.css
+++ b/frontend/src/views/Profile/statics/css/profile.css
@@ -1,68 +1,80 @@
 @import "../../../../utils/colors.css";
 @media only screen and (min-width: 1920px) {
   .profile_root {
-    width: 100% !important;
+    width: 98% !important;
     height: 100vh !important;
     margin: 0px auto !important;
     position: relative !important;
     flex-grow: 1 !important;
   }
-  .profile_longInputButton {
+  .profile_profileBox {
+    width: 1050px !important;
+    height: 700px !important;
+    border-radius: 25px !important;
+    background: var(--white) !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  }
+  input {
+    width: 100%;
     outline: none !important;
-    width: 750px !important;
-    height: 50px !important;
-    font-size: 1.3em !important;
-    margin-top: 30px !important;
     border-top: 0px !important;
     border-left: 0px !important;
     border-right: 0px !important;
     border-bottom: 2px solid var(--grey2) !important;
-    background: var(--white) !important;
+    font-size: 1.3em !important;
+  }
+  .profile_longInputButton {
+    width: 550px;
+    height: 50px !important;
+    line-height: 50px !important;
+    margin-top: 30px !important;
   }
   .profile_middleInputButton {
-    outline: none !important;
-    width: 340px !important;
-    height: 50px !important;
+    width: 250px;
+    height: 30px !important;
     margin-top: 30px !important;
-    margin-left: 25px !important;
-    border-top: 0px !important;
-    border-left: 0px !important;
-    border-right: 0px !important;
-    border-bottom: 2px solid var(--grey2) !important;
-    font-size: 1.3em !important;
-    background: var(--white) !important;
+    margin-left: 50px !important;
+    line-height: 50px !important;
   }
   .profile_inputButton {
-    outline: none !important;
-    width: 340px !important;
-    height: 50px !important;
+    width: 250px;
+    height: 30px !important;
     margin-top: 30px !important;
-    border-top: 0px !important;
-    border-left: 0px !important;
-    border-right: 0px !important;
-    border-bottom: 2px solid var(--grey2) !important;
-    font-size: 1.3em !important;
-    background: var(--white) !important;
+    line-height: 50px !important;
   }
   .profile_imageContainer {
+    height: 700px !important;
     position: relative !important;
-    height: 800px !important;
+    border-right: 1px solid rgba(127, 127, 127, 0.2);
   }
-
+  .profile_imageContainerOverlay {
+    cursor: pointer;
+    width: 150px !important;
+    height: 150px !important;
+    background-color: var(--black);
+    border-radius: 50% !important;
+    position: absolute;
+    z-index: 2;
+    opacity: 0;
+    top: 50px !important;
+    left: 60px !important;
+  }
+  .profile_imageContainerOverlay:hover {
+    opacity: 0.5;
+  }
   .profile_image {
     border-radius: 50% !important;
-    width: 200px !important;
-    height: 200px !important;
+    width: 150px !important;
+    height: 150px !important;
+    top: 50px !important;
+    left: 60px !important;
     position: relative !important;
-    top: 60px !important;
-    left: 30px !important;
   }
-
   .profile_titleContainer {
-    width: 1200px !important;
+    width: 98% !important;
     margin: 0px auto !important;
     position: relative !important;
-    top: 50px !important;
+    top: 20px !important;
   }
   .profile_activeTitle {
     display: inline-block !important;
@@ -70,37 +82,129 @@
     margin-left: 10px !important;
   }
   .profile_formBoxContainer {
-    height: 800px !important;
+    height: 650px !important;
+    margin-top: 25px !important;
   }
   .profile_formBox {
-    width: 92% !important;
-    margin: 20px auto !important;
+    width: 700px !important;
+    height: 700px !important;
+    margin: 0px auto !important;
   }
   .profile_profileBoxContainer {
-    width: 1200px !important;
-    height: 800px !important;
-    margin: 0px auto !important;
+    width: 1050px !important;
+    height: 700px !important;
+    margin: 50px auto !important;
     position: relative !important;
-    top: 50px !important;
   }
-  .profile_profileBox {
-    border-radius: 25px !important;
-    background: var(--white) !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  .profileBox_saveButtonContainer {
+    width: 100% !important;
+    position: relative;
   }
-
   .profileBox_saveButton {
-    width: 200px !important;
-    height: 50px !important;
+    width: 150px !important;
+    height: 40px !important;
+    position: relative;
+    left: 80%;
     background-color: var(--red4) !important;
     color: var(--white) !important;
-    margin-top: 20px !important;
-    position: relative !important;
-    left: 125% !important;
     font-size: 1.2em !important;
     border-radius: 15px !important;
   }
 }
 
 @media only screen and (max-width: 1919px) {
+  .profile_root {
+    width: 98% !important;
+    height: 100vh !important;
+    margin: 0px auto !important;
+    position: relative !important;
+    flex-grow: 1 !important;
+  }
+  .profile_profileBox {
+    width: 850px !important;
+    height: 600px !important;
+    border-radius: 25px !important;
+    background: var(--white) !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  }
+  .profile_profileBox input {
+    width: 100%;
+    outline: none !important;
+    border-top: 0px !important;
+    border-left: 0px !important;
+    border-right: 0px !important;
+    border-bottom: 2px solid var(--grey2) !important;
+    font-size: 1.2em !important;
+  }
+  .profile_longInputButton {
+    width: 530px;
+    height: 50px !important;
+    line-height: 50px !important;
+    margin-top: 30px !important;
+  }
+  .profile_middleInputButton {
+    width: 240px;
+    height: 30px !important;
+    margin-top: 30px !important;
+    margin-left: 50px !important;
+    line-height: 50px !important;
+  }
+  .profile_inputButton {
+    width: 240px;
+    height: 30px !important;
+    margin-top: 30px !important;
+    line-height: 50px !important;
+  }
+  .profile_imageContainer {
+    height: 600px !important;
+    position: relative !important;
+    border-right: 1px solid rgba(127, 127, 127, 0.2);
+  }
+  .profile_image {
+    border-radius: 50% !important;
+    width: 150px !important;
+    height: 150px !important;
+    top: 50px !important;
+    left: 30px !important;
+    position: relative !important;
+  }
+  .profile_titleContainer {
+    width: 98% !important;
+    margin: 0px auto !important;
+    position: relative !important;
+    top: 20px !important;
+  }
+  .profile_activeTitle {
+    display: inline-block !important;
+    margin-bottom: 20px !important;
+    margin-left: 10px !important;
+  }
+  .profile_formBoxContainer {
+    height: 600px !important;
+  }
+  .profile_formBox {
+    width: 540px !important;
+    height: 600px !important;
+    margin: 0px auto !important;
+  }
+  .profile_profileBoxContainer {
+    width: 850px !important;
+    height: 600px !important;
+    margin: 50px auto !important;
+    position: relative !important;
+  }
+  .profileBox_saveButtonContainer {
+    width: 100% !important;
+    position: relative;
+  }
+  .profileBox_saveButton {
+    width: 120px !important;
+    height: 35px !important;
+    position: relative;
+    left: 78%;
+    background-color: var(--red4) !important;
+    color: var(--white) !important;
+    font-size: 1.15em !important;
+    border-radius: 10px !important;
+  }
 }
