--- a/frontend/src/views/Admin/statics/css/adminForm.css
+++ b/frontend/src/views/Admin/statics/css/adminForm.css
@@ -8,6 +8,7 @@
     flex-grow: 1;
   }
   .inputButton {
+    margin-left: 5%;
     outline: none;
     width: 500px;
     height: 50px;
@@ -15,7 +16,7 @@
     border-top: 0px;
     border-left: 0px;
     border-right: 0px;
-    border-bottom: 2px solid var(--grey2);
+    border-bottom: 1px solid var(--grey2);
     font-size: 1.3em;
   }
   .titleContainer {
@@ -26,6 +27,7 @@
   }
   .activeTitle {
     display: inline-block;
+    font-size: 2.5rem;
     margin-bottom: 20px !important;
     margin-left: 10px !important;
   }
@@ -55,7 +57,9 @@
     margin: 0px auto !important;
   }
   .optionBox {
-    padding: 10px;
+    padding: 0px;
+    margin-left: 5%;
+    width: 500px;
     background: var(--white);
     outline: none;
     border: none;
@@ -63,7 +67,7 @@
     color: var(--grey1);
     height: 60px;
     margin-top: 25px !important;
-    border-bottom: 2px solid var(--grey2);
+    border-bottom: 1px solid var(--grey2);
   }
   .optionList {
     margin-top: 4px !important;
@@ -77,4 +81,81 @@
 }
 
 @media only screen and (max-width: 1919px) {
+  .root {
+    width: 95%;
+    height: 100vh;
+    margin: 0px auto !important;
+    position: relative;
+  }
+  .inputButton {
+    outline: none;
+    width: 25vw;
+    height: 50px;
+    margin-top: 30px !important;
+    margin-left:5%;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: 1px solid var(--grey2);
+    font-size: 1.3rem;
+  }
+  .titleContainer {
+    width: 1200px;
+    margin: 0px auto !important;
+    position: relative;
+    top: 50px;
+  }
+  .activeTitle {
+    display: inline-block;
+    margin-bottom: 20px !important;
+    margin-left: 2.5vw !important;
+    font-size: 2.5rem;
+  }
+  .formBoxContainer {
+    height: 73vh;
+    position: relative;
+    top: 30px;
+  }
+  .formBox {
+    width: 12vw;
+    margin: 0px auto !important;
+  }
+  .profileBoxContainer {
+    width: 63vw;
+    height: 750;
+    margin: 0px auto !important;
+    position: relative;
+    top: 80px;
+  }
+  .profileBox {
+    border-radius: 25px;
+    background: var(--white);
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  }
+  .buttonContainer {
+    position: relative;
+    margin: 0px auto !important;
+  }
+  .optionBox {
+    margin-left:5%;
+    padding: 0px;
+    width:25vw;
+    background: var(--white);
+    outline: none;
+    border: none;
+    font-size: 1.1rem;
+    color: var(--grey1);
+    height: 60px;
+    margin-top: 25px !important;
+    border-bottom: 1px solid var(--grey2);
+  }
+  .optionList {
+    margin-top: 4px !important;
+    background: #fff;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+    transform: scaleY(1);
+    transform-origin: left top 0px;
+    max-height: 200px;
+    overflow-y: auto;
+    }
 }
